fix overflow offsetTop

--- a/content.css
+++ b/content.css
@@ -12,7 +12,7 @@ div,section,article,h1,h2,h3,h4,h5,nav,ul,ol,dl,dd,dt,li,table,thead,tbody,tr,th
 .kcimage-content-close{position: fixed; z-index: 99999999; right: 10px; top: 10px; transition: all 0.5s ease; cursor: pointer; font-weight: normal; display: block; height: 80px; line-height: 70px; text-decoration: none; color: #FF0; font-size: 60px; width: 80px; background: rgba(255, 255, 255, 0.1); border-radius: 100%; text-align: center;}
 .kcimage-content-close:hover { transform: rotate(360deg);}
 .kcimage-content-cont{height: 100%; width: 100%; text-align: center; overflow-y: auto; display: flex; justify-content:center; align-items:center;}
-.kcimage-content-cont img{max-width: 100%;}
+.kcimage-content-cont img{max-width: 100%; display: block; margin: 0 auto;}
 .kcimage-content-cont-block{display: block;}
 .kcimage-loading{position: absolute; z-index: 99999996; cursor: no-drop; width: 100%; height: 100%; display: flex; justify-content:center; align-items:center;}
 .kcimage-zoom{cursor: zoom-in;}
